--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: alshedivat/al-folio
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-relative-links
 relative_links:
@@ -13,5 +13,3 @@ include:
   - CONTRIBUTING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
-
-theme: jekyll-theme-tactile
