--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: arturo mf
 description: ( ´ ▽ ` )ﾉ
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/126646?v=3&s=460
+avatar: https://avatars.githubusercontent.com/u/9259160?s=460&u=a363b29339e611e13e1f71ea7552e8bf5914cf37&v=4
 #
 # Flags below are optional
 #
