--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: arturo/arturomf94.github.io
+  github:
   instagram:
   linkedin:
   pinterest:
-  rss: rss # just type anything here for a working RSS icon
-  twitter: arturomf94
+  rss:
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
